@YELP_HELP_RULES@

SUBDIRS = reference

HELP_ID = evince

HELP_MEDIA = \
	figures/add-text-annotation.png		\
	figures/annotations-navigate.png	\
	figures/annotations-nav-to-page.png	\
	figures/evincelogo.png			\
	figures/evince-trail.png		\
	figures/gconf-editor.png		\
	figures/list-add-tabs.png		\
	figures/print-2sided.png		\
	figures/print-select.png		\
	figures/reverse-collate.png		\
	figures/zoom.png

HELP_FILES = \
	annotation-properties.page	\
	annotations-delete.page		\
	annotations-disabled.page	\
	annotations-navigate.page	\
	annotations.page		\
	annotations-save.page		\
	bookmarks.page			\
	bug-filing.page			\
	commandline.page		\
	convertpdf.page			\
	convertPostScript.page		\
	convertSVG.page			\
	default-settings.page		\
	develop.page			\
	documentation.page		\
	duplex-10pages.page		\
	duplex-11pages.page		\
	duplex-12pages.page		\
	duplex-13pages.page		\
	duplex-14pages.page		\
	duplex-15pages.page		\
	duplex-16pages.page		\
	duplex-3pages.page		\
	duplex-4pages.page		\
	duplex-5pages.page		\
	duplex-6pages.page		\
	duplex-7pages.page		\
	duplex-8pages.page		\
	duplex-9pages.page		\
	duplex-npages.page		\
	editing.page			\
	finding.page			\
	formats.page			\
	forms.page			\
	forms-saving.page		\
	index.page			\
	introduction.page		\
	invert-colors.page		\
	license.page			\
	legal.xml			\
	legal-unported.xml \
	movingaround.page		\
	noprint.page			\
	openerror.page			\
	opening.page			\
	password.page			\
	presentations.page		\
	print-2sided.page		\
	print-booklet.page		\
	print-differentsize.page	\
	printing.page			\
	print-order.page		\
	print-select.page		\
	reload.page			\
	shortcuts.page			\
	singlesided-13-16pages.page	\
	singlesided-17-20pages.page	\
	singlesided-3-4pages.page	\
	singlesided-5-8pages.page	\
	singlesided-9-12pages.page	\
	singlesided-npages.page		\
	synctex-beamer.page		\
	synctex-compile.page		\
	synctex-editors.page		\
	synctex.page			\
	synctex-search.page		\
	synctex-support.page		\
	textselection.page		\
	toolbar.page			\
	translate.page

HELP_LINGUAS = bg ca cs da de el en_GB es eu fi fr gl hu id it ja ko lv nl oc pt_BR ru sl sr sv te uk vi zh_CN zh_HK zh_TW

-include $(top_srcdir)/git.mk
